Alphabetical order, update pics

--- a/intro_theano/slides_source/intro_theano.tex
+++ b/intro_theano/slides_source/intro_theano.tex
@@ -107,10 +107,10 @@ August 4th, Deep Learning Summer School 2015, Montréal
     \uncover<3->{
       \begin{columns}
         \begin{column}{.07\textwidth}
-          \includegraphics[width=\columnwidth]{dumouliv.jpg}\\
+          \includegraphics[width=\columnwidth]{dumouliv.jpg}
         \end{column}
         \begin{column}{.07\textwidth}
-          \includegraphics[width=\columnwidth]{lamblinp.jpg}\\
+          \includegraphics[width=\columnwidth]{lamblinp.jpg}
         \end{column}
         \begin{column}{.8\textwidth}
           \scriptsize
@@ -147,10 +147,9 @@ August 4th, Deep Learning Summer School 2015, Montréal
     \uncover<5->{
       \begin{columns}
         \begin{column}{.07\textwidth}
-          \includegraphics[width=\columnwidth]{carriepl.jpg}
+          \includegraphics[width=\columnwidth]{philemon_brakel.jpg}
         \end{column}
         \begin{column}{.07\textwidth}
-          \includegraphics[width=\columnwidth]{philemon_brakel.jpg}
         \end{column}
         \begin{column}{.8\textwidth}
           \scriptsize
@@ -166,9 +165,11 @@ August 4th, Deep Learning Summer School 2015, Montréal
 
     \uncover<6->{
       \begin{columns}
-        \begin{column}{.07\textwidth}
-        \end{column}
-        \begin{column}{.07\textwidth}
+        \begin{column}{.2\textwidth}
+          \includegraphics[width=.25\columnwidth]{fred_lisa2.jpg}
+          \includegraphics[width=.25\columnwidth]{lamblinp.jpg}
+          \includegraphics[width=.25\columnwidth]{abergeron.png}
+          \includegraphics[width=.25\columnwidth]{carriepl.jpg}
         \end{column}
         \begin{column}{.8\textwidth}
           \scriptsize
@@ -229,15 +230,14 @@ August 4th, Deep Learning Summer School 2015, Montréal
 \begin{frame}{Related projects}
   Many libraries ar build on top of Theano (mostly machine learning)
   \begin{itemize}
-  \item Pylearn2
   \item Blocks
-  \item PyMC 3
-  \item PyAutoDiff
+  \item Keras
   \item Lasagne
+  \item Morb
+  \item Pylearn2
+  \item PyMC 3
   \item sklearn-theano
   \item theano-rnn
-  \item Morb
-  \item Keras
   \item \ldots
   \end{itemize}
 \end{frame}
@@ -811,12 +811,20 @@ def numpy_dot(a, b):
   \begin{itemize}
     \item All people working or having worked at the MILA (previously LISA), especially Theano contributors
       \begin{itemize}
-        \item James Bergstra, Olivier Breuleux, Frédéric Bastien,
-          Yoshua Bengio, Arnaud Bergeron, Razvan Pascanu, Pierre Luc
-          Carrier, David Warde-Farley, Ian Goodfellow, Joseph Turian, and
-          many more
+        \item
+          Frédéric Bastien,
+          Yoshua Bengio,
+          James Bergstra,
+          Arnaud Bergeron,
+          Olivier Breuleux,
+          Pierre Luc Carrier,
+          Ian Goodfellow,
+          Razvan Pascanu,
+          Joseph Turian,
+          David Warde-Farley,
+          and many more
       \end{itemize}
-    \item Compute Canada, RQCHP, NSERC, and Canada Research Chairs for providing funding or access to compute resources.
+    \item Compute Canada, Compute Québec, NSERC, the Canada Research Chairs, and CIFAR for providing funding or access to compute resources.
   \end{itemize}
 \end{frame}
 
