Update name, crop photos

--- a/intro_theano/slides_source/intro_theano.tex
+++ b/intro_theano/slides_source/intro_theano.tex
@@ -155,7 +155,7 @@ August 4th, Deep Learning Summer School 2015, Montréal
           \scriptsize
           Tuesday, August 11th (day 9)
           \begin{itemize}
-            \item Scan: Loops in Theano (Pierre Luc Carrier)
+            \item Scan: Loops in Theano
             \item Recurrent neural networks (Philémon Brakel)
           \end{itemize}
           \vspace{2mm}
@@ -734,7 +734,7 @@ floatX = float32
     \item Gradient through \verb|scan| implements backprop through time
     \item Can be transfered to GPU
   \end{itemize}
-  For more, come and see Pierre Luc's presentation next Tuesday (Aug. 11th, day 9)
+  For more, come and see Philémon's presentation next Tuesday (Aug. 11th, day 9)
 \end{frame}
 
 
