Updated scan tutorial according to feedback

--- a/scan_tutorial/scan_tutorial.ipynb
+++ b/scan_tutorial/scan_tutorial.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "Calling `scan()`, we see that it returns two outputs.\n",
     "\n",
-    "The first output contains the outputs at every timestep concatenated into a tensor. In our case, the output of a single timestep is a scalar so output is a vector where `output[i]` is the output of the i-th iteration.\n",
+    "The first output contains the outputs of `fn` from every timestep concatenated into a tensor. In our case, the output of a single timestep is a scalar so output is a vector where `output[i]` is the output of the i-th iteration.\n",
     "\n",
     "The second output details if and how the execution of the Scan updates any shared variable in the graph. It should be provided as an argument when compiling the Theano function."
    ]
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If omitted, the state of any shared variables modified by Scan will not be updated properly. Random number sampling, for instance, relies on shared variables. If `updates` is not provided, the state of the random number generate won't be updated properly and the same numbers might be sampled repeatedly. **Always** provide `updates` when compiling your Theano function.\n",
+    "If `updates` is omitted, the state of any shared variables modified by Scan will not be updated properly. Random number sampling, for instance, relies on shared variables. If `updates` is not provided, the state of the random number generator won't be updated properly and the same numbers might be sampled repeatedly. **Always** provide `updates` when compiling your Theano function.\n",
     "\n",
     "Now that we've defined how to do elementwise multiplication with Scan, we can see that the result is as expected :"
    ]
@@ -161,7 +161,7 @@
     "\n",
     "In this example, we introduce another of Scan's features; non-sequences. To demonstrate how to use them, we use Scan to compute the activations of  a linear MLP layer over a minibatch.\n",
     "\n",
-    "It is now yet a use case where Scan is truly useful but it introduces a requirement that sequences cannot fulfill; we need some variables (the parameters of the layer), to be available 'as is' at every iteration of the loop. We do *not* want Scan to iterate over them and give only part of them at every iteration.\n",
+    "It is not yet a use case where Scan is truly useful but it introduces a requirement that sequences cannot fulfill; we need some variables (the parameters of the layer), to be available 'as is' at every iteration of the loop. We do *not* want Scan to iterate over them and give only part of them at every iteration.\n",
     "\n",
     "Once again, we begin by setting up our Theano variables :"
    ]
@@ -291,7 +291,7 @@
    "source": [
     "The trick part is informing Scan that our step function expects as input the output of a previous iteration. To achieve this, we need to use a new parameter of the `scan()` function: `outputs_info`. This parameter is used to tell Scan how we intend to use each of the outputs that are computed at each iteration.\n",
     "\n",
-    "This parameter can be ommited (like we did so far) when the step function doesn't depend on any output of a previous iteration. However, now that we wish to have recurrent outputs, we need to start using it.\n",
+    "This parameter can be omited (like we did so far) when the step function doesn't depend on any output of a previous iteration. However, now that we wish to have recurrent outputs, we need to start using it.\n",
     "\n",
     "`outputs_info` takes a sequence with one element for every output of the `step()` function :\n",
     "* For a **non-recurrent output** (like in every example before this one), the element should be `None`.\n",
@@ -414,7 +414,7 @@
    "source": [
     "The next step is defining the value of `outputs_info`.\n",
     "\n",
-    "Recall that, for **non-recurrent outputs**, the value is `None` and, for **simple recurrent outputs**, the value is a single initial state. For **general recurrent outputs**, where iteration $t$ may depend on multiple past values, the value is a dictionnary. That dictionnary has two values:\n",
+    "Recall that, for **non-recurrent outputs**, the value is `None` and, for **simple recurrent outputs**, the value is a single initial state. For **general recurrent outputs**, where iteration $t$ may depend on multiple past values, the value is a dictionary. That dictionary has two values:\n",
     "* taps : list declaring which previous values of that output every iteration will need. `[-3, -2, -1]` would mean every iteration should take as input the last 3 values of that output. `[-2]` would mean every iteration should take as input the value of that output from two iterations ago.\n",
     "* initial : tensor of initial states.\n",
     "\n",
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've defined the step function and the properties of our outputs, we can call the `scan()` function. Because the `step()` function has multiple outputs, the output of scan will be a sequence of tensors: the first tensor containing all the states of the first output and the second tensor containing all the states of the second input.\n",
+    "Now that we've defined the step function and the properties of our outputs, we can call the `scan()` function. Because the `step()` function has multiple outputs, the first output of `scan()` function will be a sequence of tensors: the first tensor containing all the states of the first output and the second tensor containing all the states of the second input.\n",
     "\n",
     "In every previous example, we used sequences and Scan automatically inferred the number of iterations it needed to run from the length of these\n",
     "sequences. Now that we have no sequence, we need to explicitly tell Scan how many iterations to run using the `n_step` parameter. The value can be real or symbolic."
