Do not re-download mnist.pkl.gz each time

--- a/intro_theano/logistic_regression.ipynb
+++ b/intro_theano/logistic_regression.ipynb
@@ -31,13 +31,15 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import requests\n",
     "import gzip\n",
     "import pickle\n",
     "\n",
-    "r = requests.get('http://www.iro.umontreal.ca/~lisa/deep/data/mnist/mnist.pkl.gz')\n",
-    "with open('mnist.pkl.gz', 'wb') as data_file:\n",
-    "    data_file.write(r.content)\n",
+    "if not os.path.exists('mnist.pkl.gz'):\n",
+    "    r = requests.get('http://www.iro.umontreal.ca/~lisa/deep/data/mnist/mnist.pkl.gz')\n",
+    "    with open('mnist.pkl.gz', 'wb') as data_file:\n",
+    "        data_file.write(r.content)\n",
     "\n",
     "with gzip.open('mnist.pkl.gz', 'rb') as data_file:\n",
     "    train_set, valid_set, test_set = pickle.load(data_file)\n",
