Go through the presentation and fix the vocabulary for convolution elements.
Also add formula for average pooling.

--- a/conv/conv.tex
+++ b/conv/conv.tex
@@ -18,6 +18,9 @@ Arnaud Bergeron
 }
 \date{August 10, 2015}
 
+\definecolor{termblue}{RGB}{51, 51, 179}
+\newcommand{\term}[1]{\textcolor{termblue}{#1}}
+
 \begin{document}
 
 \begin{frame}[plain]
@@ -28,20 +31,9 @@ Arnaud Bergeron
 
 \section{Convolution}
 
-% Definitions
-\begin{frame}
-Some vocabulary:
-\begin{description}[feature maps]
-\item[feature map] analogue to layer (the activations, not the weights) for a neural network.
-\item[channel] a single 2D "image" which composes a feature map.
-\item[filter] weight (as in layer weights).
-\item[stack] ???
-\end{description}
-\end{frame}
-
 % Basic operation
 \begin{frame}
-The basic convolution operation (2D, discrete)
+The basic convolution operation
 \begin{overlayarea}{\textwidth}{5.6cm}
 \only<1>{
 \includegraphics[width=\textwidth]{Conv-single}
@@ -51,15 +43,15 @@ The basic convolution operation (2D, discrete)
 C(i, j) = \sum^{x = 0}_{m-1} \sum^{y = 0}_{n-1} A(x + i, y + j) F(x, y)
 \end{displaymath}
 \begin{itemize}
-\item<3-> $(m, n)$ is the size of the filter.
+\item $(m, n)$ is the size of the filter.
 \end{itemize}
 }
 \end{overlayarea}
-where $A$ is the input, $F$ are the filters and $C$ is the convolution result.
+Where $A$ is the input channel, $F$ is the filter and $C$ is the output channel.
 \end{frame}
 
 \begin{frame}
-The basic convolution operation (2D, discrete) for a single example
+The basic convolution operation with multiple outputs
 \begin{overlayarea}{\textwidth}{5.6cm}
 \only<1>{
 \includegraphics[width=\textwidth]{Conv-mout}
@@ -70,15 +62,15 @@ C_{o}(i, j) = \sum^{x = 0}_{m-1} \sum^{y = 0}_{n-1} A(x + i, y + j) F_{o}(x, y)
 \end{displaymath}
 \begin{itemize}
 \item $(m, n)$ is the size of the filters.
-\item<3-> $o$ is the output channel.
+\item $o$ is the output channel.
 \end{itemize}
 }
 \end{overlayarea}
-where $A$ is the input, $F$ are the filters and $C$ is the convolution result.
+where $A$ is the input channel, $F$ are the filters and $C$ are output channels.
 \end{frame}
 
 \begin{frame}
-The basic convolution operation (2D, discrete) for a single example
+The basic convolution operation with multiple inputs
 \begin{overlayarea}{\textwidth}{5.6cm}
 \only<1>{
 \includegraphics[width=\textwidth]{Conv-min}
@@ -89,16 +81,16 @@ C(i, j) = \sum^{k=0}_l \sum^{x = 0}_{m-1} \sum^{y = 0}_{n-1} A_{k}(x + i, y + j)
 \end{displaymath}
 \begin{itemize}
 \item $(m, n)$ is the size of the filters.
-\item<3-> $k$ is the input channel.
-\item<4-> $l$ is the number of input channels.
+\item $k$ is the input channel.
+\item $l$ is the number of input channels.
 \end{itemize}
 }
 \end{overlayarea}
-where $A$ is the input, $F$ are the filters and $C$ is the convolution result.
+where $A$ are the input channels, $F$ is the filter bank and $C$ is the output channel.
 \end{frame}
 
 \begin{frame}
-The basic convolution operation (2D, discrete)
+The basic convolution operation with multiple inputs and outputs
 \begin{overlayarea}{\textwidth}{5.6cm}
 \only<1>{
 \includegraphics[width=\textwidth]{Conv-basic}
@@ -115,11 +107,11 @@ C_{o}(i, j) = \sum^{k=0}_{l-1} \sum^{x = 0}_{m-1} \sum^{y = 0}_{n-1} A_{k}(x + i
 \end{itemize}
 }
 \end{overlayarea}
-where $A$ is the input, $F$ are the filters and $C$ is the convolution result.
+where $A$ are the input channels, $F$ are the filter banks and $C$ are the output channels.
 \end{frame}
 
 \begin{frame}
-The basic convolution operation (2D, discrete)
+The basic convolution operation with batches
 \begin{overlayarea}{\textwidth}{5.6cm}
 \only<1>{
 \includegraphics[width=\textwidth]{Conv-basic}
@@ -133,11 +125,21 @@ C_{bo}(i, j) = \sum^{k=0}_{l-1} \sum^{x = 0}_{m-1} \sum^{y = 0}_{n-1} A_{bk}(x +
 \item $o$ is the output channel.
 \item $k$ is the input channel.
 \item $l$ is the number of input channels.
-\item<3-> $b$ is the batch.
+\item $b$ is the batch.
 \end{itemize}
 }
 \end{overlayarea}
-where $A$ is the input, $F$ are the filters and $C$ is the convolution result.
+where $A$ are the input channels, $F$ are the filter banks and $C$ are the output channels.
+\end{frame}
+
+% Definitions
+\begin{frame}
+Some vocabulary:
+\begin{description}[filter banks]
+\item[filter] what we call the smaller or "learned" 2D matrix in a traditional convolution.
+\item[channel] what we call input or output 2D matrices in a traditional convolution.  Sometimes called \term{feature map}.
+\item[filter bank] group of filters whose convolution output will be summed to form one output channel.  Sometimes called \term{filter stack}.
+\end{description}
 \end{frame}
 
 % Technical considerations
@@ -150,44 +152,38 @@ Memory layout for images: 'bc01'
 \item last two dimensions are the data ('0', '1')
 \end{itemize}
 
-\uncover<2->{
 Memory layout for filters: 'nc01'
 
 \begin{itemize}
 \item first dimension is the output channel ('n')
 \item second dimension is the input channel ('c')
 \item last two dimensions are the data ('0', '1')
-\end{itemize}}
+\end{itemize}
 
 \ \\
 
-\uncover<3->{Some other packages may use different conventions.}
+\uncover<2->{Some other packages may use different conventions.}
 \end{frame}
 
 \section{Pooling}
 
 \begin{frame}
-Basic pooling operation \only<2->{(max)}
-\begin{overlayarea}{\textwidth}{5cm}
-\only<1>{
+Basic pooling operation
 \includegraphics[width=\textwidth]{Pool-max}
-}
-\only<2->{
-\begin{displaymath}
-O_k(i, j) = \max_{\substack{0 \leq x < m \\ 0 \leq y < n}} I_k(x + i, y + j)
-\end{displaymath}
-\begin{itemize}
-\item<3-> $k$ is the channel.
-\item<4-> $(m, n)$ is the size of the filters.
-\end{itemize}
-}
-\end{overlayarea}
 \end{frame}
 
 \begin{frame}
+Max Pooling
+\begin{displaymath}
+O_k(i, j) = \max_{\substack{0 \leq x < m \\ 0 \leq y < n}} I_k(x + i, y + j)
+\end{displaymath}
+Average Pooling
+\begin{displaymath}
+O_k(i, j) = \frac{1}{mn}\sum^{x = 0}_{m - 1} \sum^{y = 0}_{n - 1} I_k(x + i, y + j)
+\end{displaymath}
 \begin{itemize}
-\item One thing to watch out for is the border handling
-\item Other types of pooling exist such as average pooling
+\item $k$ is the channel.
+\item $(m, n)$ is the size of the filters.
 \end{itemize}
 \end{frame}
 
