Add cell with ReLU option for the MLP.

--- a/theano_mlp/theano_mlp.ipynb
+++ b/theano_mlp/theano_mlp.ipynb
@@ -433,9 +433,11 @@
     "from fuel.schemes import SequentialScheme\n",
     "from fuel.transformers import Flatten\n",
     "\n",
-    "train_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(0, 50000))\n",
-    "valid_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(50000, 60000))\n",
-    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'))\n",
+    "# the full set is usually (0, 50000) for train, (50000, 60000) for valid and no slice for test.\n",
+    "# We only selected a subset to go faster.\n",
+    "train_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(0, 20000))\n",
+    "valid_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(20000, 24000))\n",
+    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'), subset=slice(0, 10000))\n",
     "\n",
     "## Define a couple of helper variables and functions for the optimization\n",
     "batch_size = 20\n",
@@ -452,9 +454,9 @@
     "test_stream = Flatten(DataStream.default_stream(\n",
     "    test_set, iteration_scheme=SequentialScheme(test_set.num_examples, batch_size)))\n",
     "\n",
-    "## early-stopping parameters\n",
+    "## early-stopping parameters tuned for 1-2 min runtime\n",
     "# maximum number of epochs\n",
-    "n_epochs = 1000\n",
+    "n_epochs = 20\n",
     "# look as this many examples regardless\n",
     "patience = 5000\n",
     "# wait this much longer when a new best is found\n",
@@ -584,8 +586,8 @@
     "      'with test performance %f %%' %\n",
     "      (best_validation_loss * 100., test_score * 100.))\n",
     "\n",
-    "print('The code ran for %d epochs, with %f epochs/sec' %\n",
-    "      (epoch, 1. * epoch / (end_time - start_time)))"
+    "print('The code ran for %d epochs, with %f epochs/sec (%.2fm total time)' %\n",
+    "      (epoch, 1. * epoch / (end_time - start_time), (end_time - start_time) / 60.))"
    ]
   },
   {
@@ -595,10 +597,59 @@
     "## How can we make it better?\n",
     "\n",
     "- Additional learning rules (RMSProp, ADAM, ...)\n",
-    "- Rectified Linear Units (ReLU), and appropriate initialization\n",
     "- Max-column normalization\n",
     "- Dropout\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ReLU activation\n",
+    "\n",
+    "If you want to try the network with ReLU activations you can use the code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def relu(x):\n",
+    "    return x * (x > 0)\n",
+    "\n",
+    "rng = numpy.random.RandomState(1234)\n",
+    "\n",
+    "mlp_model = MLP(\n",
+    "    rng=rng,\n",
+    "    input=x,\n",
+    "    target=y,\n",
+    "    n_in=n_in,\n",
+    "    n_hidden=[500],\n",
+    "    n_out=n_out,\n",
+    "    activation=relu)\n",
+    "\n",
+    "lr = numpy.float32(0.1)\n",
+    "L1_reg = numpy.float32(0)\n",
+    "L2_reg = numpy.float32(0.0001)\n",
+    "\n",
+    "train_model = get_regularized_training_fn(mlp_model, L1_reg, L2_reg, lr)\n",
+    "test_model = get_test_fn(mlp_model)\n",
+    "\n",
+    "# Now you can run the training cell again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -606,18 +657,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
   }
  },
  "nbformat": 4,
