Split off the training code inside a function that can be reused.
This way it's easier to have multiple models to train.

--- a/theano_mlp/theano_mlp.ipynb
+++ b/theano_mlp/theano_mlp.ipynb
@@ -428,6 +428,112 @@
    "source": [
     "import timeit\n",
     "\n",
+    "## early-stopping parameters tuned for 1-2 min runtime\n",
+    "def do_training(train_model, test_model, train_set, valid_set, test_set,\n",
+    "                # maximum number of epochs\n",
+    "                n_epochs=20,\n",
+    "                # look at this many examples regardless\n",
+    "                patience=5000,\n",
+    "                # wait this much longer when a new best is found\n",
+    "                patience_increase=2,\n",
+    "                # a relative improvement of this much is considered significant\n",
+    "                improvement_threshold=0.995,\n",
+    "                batch_size=20):\n",
+    "\n",
+    "    n_train_batches = train_set.num_examples // batch_size\n",
+    "\n",
+    "    # Create data streams to iterate through the data.\n",
+    "    train_stream = Flatten(DataStream.default_stream(\n",
+    "        train_set, iteration_scheme=SequentialScheme(train_set.num_examples, batch_size)))\n",
+    "    valid_stream = Flatten(DataStream.default_stream(\n",
+    "        valid_set, iteration_scheme=SequentialScheme(valid_set.num_examples, batch_size)))\n",
+    "    test_stream = Flatten(DataStream.default_stream(\n",
+    "        test_set, iteration_scheme=SequentialScheme(test_set.num_examples, batch_size)))\n",
+    "\n",
+    "    # go through this many minibatches before checking the network on the validation set;\n",
+    "    # in this case we check every epoch\n",
+    "    validation_frequency = min(n_train_batches, patience / 2)\n",
+    "\n",
+    "    best_validation_loss = numpy.inf\n",
+    "    test_score = 0.\n",
+    "    start_time = timeit.default_timer()\n",
+    "\n",
+    "    done_looping = False\n",
+    "    epoch = 0\n",
+    "    while (epoch < n_epochs) and (not done_looping):\n",
+    "        epoch = epoch + 1\n",
+    "        minibatch_index = 0\n",
+    "        for minibatch_x, minibatch_y in train_stream.get_epoch_iterator():\n",
+    "            minibatch_avg_cost = train_model(minibatch_x, minibatch_y)\n",
+    "\n",
+    "            # iteration number\n",
+    "            iter = (epoch - 1) * n_train_batches + minibatch_index\n",
+    "            if (iter + 1) % validation_frequency == 0:\n",
+    "                # compute zero-one loss on validation set\n",
+    "                validation_losses = []\n",
+    "                for valid_xi, valid_yi in valid_stream.get_epoch_iterator():\n",
+    "                    validation_losses.append(test_model(valid_xi, valid_yi))\n",
+    "                this_validation_loss = numpy.mean(validation_losses)\n",
+    "                print('epoch %i, minibatch %i/%i, validation error %f %%' %\n",
+    "                      (epoch,\n",
+    "                       minibatch_index + 1,\n",
+    "                       n_train_batches,\n",
+    "                       this_validation_loss * 100.))\n",
+    "\n",
+    "                # if we got the best validation score until now\n",
+    "                if this_validation_loss < best_validation_loss:\n",
+    "                    # improve patience if loss improvement is good enough\n",
+    "                    if this_validation_loss < best_validation_loss * improvement_threshold:\n",
+    "                        patience = max(patience, iter * patience_increase)\n",
+    "\n",
+    "                    best_validation_loss = this_validation_loss\n",
+    "\n",
+    "                    # test it on the test set\n",
+    "                    test_losses = []\n",
+    "                    for test_xi, test_yi in test_stream.get_epoch_iterator():\n",
+    "                        test_losses.append(test_model(test_xi, test_yi))\n",
+    "\n",
+    "                    test_score = numpy.mean(test_losses)\n",
+    "                    print('     epoch %i, minibatch %i/%i, test error of best model %f %%' %\n",
+    "                          (epoch,\n",
+    "                           minibatch_index + 1,\n",
+    "                           n_train_batches,\n",
+    "                           test_score * 100.))\n",
+    "\n",
+    "                    # save the best parameters\n",
+    "                    # build a name -> value dictionary\n",
+    "                    best = {param.name: param.get_value() for param in mlp_model.params}\n",
+    "                    numpy.savez('best_mlp_model.npz', **best)\n",
+    "\n",
+    "            minibatch_index += 1\n",
+    "            if patience <= iter:\n",
+    "                done_looping = True\n",
+    "                break\n",
+    "\n",
+    "    end_time = timeit.default_timer()\n",
+    "    print('Optimization complete with best validation score of %f %%, '\n",
+    "          'with test performance %f %%' %\n",
+    "          (best_validation_loss * 100., test_score * 100.))\n",
+    "\n",
+    "    print('The code ran for %d epochs, with %f epochs/sec (%.2fm total time)' %\n",
+    "          (epoch, 1. * epoch / (end_time - start_time), (end_time - start_time) / 60.))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then load our data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from fuel.datasets import MNIST\n",
     "from fuel.streams import DataStream\n",
     "from fuel.schemes import SequentialScheme\n",
@@ -437,36 +543,7 @@
     "# We only selected a subset to go faster.\n",
     "train_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(0, 20000))\n",
     "valid_set = MNIST(which_sets=('train',), sources=('features', 'targets'), subset=slice(20000, 24000))\n",
-    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'), subset=slice(0, 10000))\n",
-    "\n",
-    "## Define a couple of helper variables and functions for the optimization\n",
-    "batch_size = 20\n",
-    "n_train_batches = train_set.num_examples // batch_size\n",
-    "\n",
-    "# Create data streams to iterate through the data.\n",
-    "train_stream = DataStream.default_stream(\n",
-    "    train_set,\n",
-    "    iteration_scheme=SequentialScheme(train_set.num_examples, batch_size))\n",
-    "# By default, this will return batches as 4D tensor (batch, 1, 28, 28), but we need raster images\n",
-    "train_stream = Flatten(train_stream)\n",
-    "valid_stream = Flatten(DataStream.default_stream(\n",
-    "    valid_set, iteration_scheme=SequentialScheme(valid_set.num_examples, batch_size)))\n",
-    "test_stream = Flatten(DataStream.default_stream(\n",
-    "    test_set, iteration_scheme=SequentialScheme(test_set.num_examples, batch_size)))\n",
-    "\n",
-    "## early-stopping parameters tuned for 1-2 min runtime\n",
-    "# maximum number of epochs\n",
-    "n_epochs = 20\n",
-    "# look as this many examples regardless\n",
-    "patience = 5000\n",
-    "# wait this much longer when a new best is found\n",
-    "patience_increase = 2\n",
-    "# a relative improvement of this much is considered significant\n",
-    "improvement_threshold = 0.995\n",
-    "\n",
-    "# go through this many minibatches before checking the network on the validation set;\n",
-    "# in this case we check every epoch\n",
-    "validation_frequency = min(n_train_batches, patience / 2)"
+    "test_set = MNIST(which_sets=('test',), sources=('features', 'targets'), subset=slice(0, 10000))\n"
    ]
   },
   {
@@ -525,69 +602,7 @@
    },
    "outputs": [],
    "source": [
-    "best_validation_loss = numpy.inf\n",
-    "test_score = 0.\n",
-    "start_time = timeit.default_timer()\n",
-    "\n",
-    "done_looping = False\n",
-    "epoch = 0\n",
-    "while (epoch < n_epochs) and (not done_looping):\n",
-    "    epoch = epoch + 1\n",
-    "    minibatch_index = 0\n",
-    "    for minibatch_x, minibatch_y in train_stream.get_epoch_iterator():\n",
-    "        minibatch_avg_cost = train_model(minibatch_x, minibatch_y)\n",
-    "\n",
-    "        # iteration number\n",
-    "        iter = (epoch - 1) * n_train_batches + minibatch_index\n",
-    "        if (iter + 1) % validation_frequency == 0:\n",
-    "            # compute zero-one loss on validation set\n",
-    "            validation_losses = []\n",
-    "            for valid_xi, valid_yi in valid_stream.get_epoch_iterator():\n",
-    "                validation_losses.append(test_model(valid_xi, valid_yi))\n",
-    "            this_validation_loss = numpy.mean(validation_losses)\n",
-    "            print('epoch %i, minibatch %i/%i, validation error %f %%' %\n",
-    "                  (epoch,\n",
-    "                   minibatch_index + 1,\n",
-    "                   n_train_batches,\n",
-    "                   this_validation_loss * 100.))\n",
-    "\n",
-    "            # if we got the best validation score until now\n",
-    "            if this_validation_loss < best_validation_loss:\n",
-    "                # improve patience if loss improvement is good enough\n",
-    "                if this_validation_loss < best_validation_loss * improvement_threshold:\n",
-    "                    patience = max(patience, iter * patience_increase)\n",
-    "\n",
-    "                best_validation_loss = this_validation_loss\n",
-    "\n",
-    "                # test it on the test set\n",
-    "                test_losses = []\n",
-    "                for test_xi, test_yi in test_stream.get_epoch_iterator():\n",
-    "                    test_losses.append(test_model(test_xi, test_yi))\n",
-    "\n",
-    "                test_score = numpy.mean(test_losses)\n",
-    "                print('     epoch %i, minibatch %i/%i, test error of best model %f %%' %\n",
-    "                      (epoch,\n",
-    "                       minibatch_index + 1,\n",
-    "                       n_train_batches,\n",
-    "                       test_score * 100.))\n",
-    "\n",
-    "                # save the best parameters\n",
-    "                # build a name -> value dictionary\n",
-    "                best = {param.name: param.get_value() for param in mlp_model.params}\n",
-    "                numpy.savez('best_mlp_model.npz', **best)\n",
-    "\n",
-    "        minibatch_index += 1\n",
-    "        if patience <= iter:\n",
-    "            done_looping = True\n",
-    "            break\n",
-    "\n",
-    "end_time = timeit.default_timer()\n",
-    "print('Optimization complete with best validation score of %f %%, '\n",
-    "      'with test performance %f %%' %\n",
-    "      (best_validation_loss * 100., test_score * 100.))\n",
-    "\n",
-    "print('The code ran for %d epochs, with %f epochs/sec (%.2fm total time)' %\n",
-    "      (epoch, 1. * epoch / (end_time - start_time), (end_time - start_time) / 60.))"
+    "do_training(train_model, test_model, train_set, valid_set, test_set)"
    ]
   },
   {
@@ -623,7 +638,7 @@
     "\n",
     "rng = numpy.random.RandomState(1234)\n",
     "\n",
-    "mlp_model = MLP(\n",
+    "mlp_relu = MLP(\n",
     "    rng=rng,\n",
     "    input=x,\n",
     "    target=y,\n",
@@ -636,10 +651,19 @@
     "L1_reg = numpy.float32(0)\n",
     "L2_reg = numpy.float32(0.0001)\n",
     "\n",
-    "train_model = get_regularized_training_fn(mlp_model, L1_reg, L2_reg, lr)\n",
-    "test_model = get_test_fn(mlp_model)\n",
-    "\n",
-    "# Now you can run the training cell again"
+    "train_relu = get_regularized_training_fn(mlp_relu, L1_reg, L2_reg, lr)\n",
+    "test_relu = get_test_fn(mlp_relu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "do_training(train_relu, test_relu, train_set, valid_set, test_set)"
    ]
   },
   {
@@ -657,6 +681,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
